--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-stylus-transformer",
+  "name": "react-native-stylus-transformer-alin",
   "version": "1.2.0",
-  "description": "Stylus transformer for react-native",
+  "description": "Stylus transformer for react-native ,support cli",
   "main": "index.js",
   "repository": "https://github.com/kristerkari/react-native-stylus-transformer",
   "scripts": {
