--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-stylus-transformer-alin",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Stylus transformer for react-native ,support cli",
   "main": "index.js",
   "repository": "https://github.com/kristerkari/react-native-stylus-transformer",
@@ -16,8 +16,7 @@
   "license": "MIT",
   "files": [
     "index.js",
-    "README.md",
-    "./bin/stylusToTs"
+    "README.md"
   ],
   "keywords": [
     "react-native",
