--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-stylus-transformer-alin",
-  "version": "1.2.4",
+  "version": "1.2.5",
   "description": "Stylus transformer for react-native ,support cli",
   "main": "index.js",
   "repository": "https://github.com/kristerkari/react-native-stylus-transformer",
@@ -25,11 +25,11 @@
   ],
   "dependencies": {
     "css-to-react-native-transform": "^1.8.1",
-    "semver": "^5.6.0"
+    "semver": "^5.6.0",
+    "stylus": ">=0.54.5"
   },
   "peerDependencies": {
-    "react-native": ">=0.45.0",
-    "stylus": ">=0.54.5"
+    "react-native": ">=0.45.0"
   },
   "devDependencies": {
     "eslint": "^5.14.0",
