--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "css-to-react-native-transform-alin": "^1.9.4",
     "semver": "^5.6.0",
-    "stylus": ">=0.54.5"
+    "stylus-alin": ">=0.54.8"
   },
   "peerDependencies": {
     "react-native": ">=0.45.0"
